--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -14,6 +14,7 @@ header h1 {
 }
 
 header button {
+  cursor: pointer;
   border: none;
   background-color: transparent;
   color: #111827;
@@ -27,10 +28,10 @@ header button {
 }
 
 @media (max-width: 376px) {
-    header h1 {
-        font-size: 24px;
-    }
-    header button {
-        font-size: 16px;
-    }
+  header h1 {
+    font-size: 24px;
+  }
+  header button {
+    font-size: 16px;
+  }
 }
