--- a/app/assets/css/newstyle.css
+++ b/app/assets/css/newstyle.css
@@ -5,6 +5,8 @@ body {
   background-color: antiquewhite;
   font-family: "Courier New", Courier, monospace;
   gap: 8px;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
