--- a/app/assets/css/footer.css
+++ b/app/assets/css/footer.css
@@ -1,9 +1,9 @@
 footer {
   background-color: #111827;
   min-height: 100px;
+  width: 100%;
   justify-content: space-between;
   gap: 48px;
-  border-radius: 48px 48px 0 0;
 }
 
 footer p:last-child {
