--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -1,10 +1,11 @@
 header {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   height: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  color: orangered;
 }
 
 header h1 {
@@ -17,11 +18,14 @@ header button {
   cursor: pointer;
   border: none;
   background-color: transparent;
-  color: #111827;
   width: 100px;
   height: 100px;
   font-size: 24px;
   padding: 0;
+}
+
+header button svg {
+  color: orangered;
 }
 
 @media (max-width: 1280px) {
