--- a/app/design3/footer.css
+++ b/app/design3/footer.css
@@ -1,4 +1,6 @@
 footer {
+  position: absolute;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   width: calc(100% - 32px);
@@ -19,7 +21,7 @@ footer .social-media-icons {
 }
 
 footer .social-media-icons a {
-    padding: 2px;
+  padding: 2px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -30,8 +32,25 @@ footer .social-media-icons a {
 }
 
 footer .social-media-icons a:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  color: #fbfefd;
+  background-color: rgba(255, 69, 0, 0.75);;
+}
+
+footer h3 {
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 550px) {
+  footer {
+    flex-direction: column-reverse;
+  }
+
+  footer .social-media-icons {
+    margin-bottom: 8px;
+  }
 }
 
 @media (max-width: 480px) {
+    
 }
